--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a research scientist at Google. His research in machine learning and computer vision focuses on label-efficient learning and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AAAI, AISTATS, and WACV. He earned a Ph.D. degree in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
+                    <p>Boqing Gong is a research scientist at Google, Seattle. His research in machine learning and computer vision focuses on data-efficient learning of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AAAI, AISTATS, and WACV. He earned a Ph.D. degree in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
                     <p><br></p>
 
                     
@@ -155,13 +155,8 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-21, NeurIPS'19-21, ICLR'21, ICCV'19-21, AISTATS'19, and WACV'18-20</p>
-                    <p></p>
-                    <p>Senior area chair (meta-reviewer) of AAAI'20-21</p>
-                    <p></p>
-                    <p>Reviewing for NSF (proposals), NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
-                    <p></p>
-                    <p>CVPR'17 Outstanding Reviewer</p>
+                    <p><b>Tutorial co-chair</b> of CVPR'22, <b>Area chair</b> of CVPR'20, '22, ECCV'20, ICML'19-21, NeurIPS'19-21, ICLR'21-22, ICCV'19-21, AISTATS'19, and WACV'18-20, <b>Senior area chair</b> (meta-reviewer) of AAAI'20-21, Reviewer for NSF (proposals), NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
+                    <p>CVPR'17, '21 Outstanding Reviewer</p>
                     
                   </div>
                 </div>
@@ -227,8 +222,8 @@
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="research.html"><i class="icon oi-forward"></i><span>slides</span></a>
                           </div>
                           <h5 class="title"><a href="https://l2id.github.io/index.html">Invited speaker at the IEEE CVPR 2021 Workshop on Learning from Limited and Imperfect Data</a> </h5>
-                          <h5 class="title">Serving as an area chair for NeurIPS 2021, ICCV 2021, ICML 2021, and IJCAI 2021</h5>
-                          <h5 class="title">Serving on one NSF panel (2021)</h5>
+                          <h5 class="title">Serving as an area chair for NeurIPS 2021, ICCV 2021, ICML 2021, and ICLR 2021</h5>
+                          <h5 class="title">Serving on three NSF panels (2021)</h5>
                         </div>
 
                         <div class="tl-item">
