--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a research scientist at Google, Seattle. His research in machine learning and computer vision focuses on data-efficient learning of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AAAI, AISTATS, and WACV. He earned a Ph.D. degree in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
-                    <p><br></p>
+                    <p>Boqing Gong is a research scientist at Google, Seattle. His research in machine learning and computer vision focuses on efficiency, generalization, and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.<br><br></p>
 
-                    
-                    <h4 class="with-sideline"><u> <a href="research.html"><font color="blue">Slides from recent talks</font> </a></u> </h4>
+                    <h3 class="with-sideline">Services</h3>
+                    <p><b>Program co-chair</b> for WACV'23. <b>Tutorial co-chair</b> for CVPR'22, <b>Area chair</b> for CVPR'20, '22, ECCV'20, ICML'19-22, NeurIPS'19-22, ICLR'21-22, ICCV'19-21, AISTATS'19, and WACV'18-20, <b>Senior area chair</b> (meta-reviewer) for AAAI'20-21. Reviewer for NSF (proposals), NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
+                    <p>CVPR'17, '21 Outstanding Reviewer</p>
                     <!--br><br>
                     <p> <font color="black">Curious about <i>sequential determinantal point processes?</i> Come to <u><a href="https://rpand002.github.io/cvpr19_sumt.html"><font color="blue"> our CVPR tutorial</font> </a></u> on June 16, 2019.</font>  </p>
                     <p> <font color="black">Wanted to learn about <i>recent works on adversarial attack & defense?</i> Check out our presentations in <u><a href="https://icml.cc/Conferences/2019/ScheduleMultitrack?event=4749"><font color="blue"> ICML</font> </a></u> on June 12, <u><a href="https://amlcvpr2019.github.io/"><font color="blue"> CVPR workshop on AdvMLCV </font> </a></u> on June 16, and <u><a href="http://www.gigavision.cn/index.php?c=main&a=CVPR2019"><font color="blue"> CVPR workshop on GigaVision</font> </a></u> on June 17, 2019.</font>  </p-->
@@ -153,11 +153,8 @@
                   </div>
                   <div class="col-md-3">
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
-                    <p><br></p>
-                    <h3 class="with-sideline">Recent services</h3>
-                    <p><b>Tutorial co-chair</b> of CVPR'22, <b>Area chair</b> of CVPR'20, '22, ECCV'20, ICML'19-21, NeurIPS'19-21, ICLR'21-22, ICCV'19-21, AISTATS'19, and WACV'18-20, <b>Senior area chair</b> (meta-reviewer) of AAAI'20-21, Reviewer for NSF (proposals), NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
-                    <p>CVPR'17, '21 Outstanding Reviewer</p>
-                    
+                    <p><br><br></p>
+                    <h3 class="with-sideline">Recent talks</h3><a href="research.html" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Read Slides</span></a>
                   </div>
                 </div>
               </div>
@@ -187,6 +184,8 @@
                         <li></li>
                         <li></li>
                         <li></li>
+                        <li></li>
+                        <li>2022</li>
                         <li>2021</li>
                         <li>2020</li>
                         <li>2019</li>
@@ -211,6 +210,18 @@
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
+                        <div class="tl-item"></div>
+
+                        <div class="tl-item">
+                          <h5 class="description"><a href="publications.html">Check out our 2022 papers!</a></h5>
+                          <div class="description"> 
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title">Program co-chair for WACV 2023 </h5>
+                          <h5 class="title">Tutorial co-chair for CVPR 2022 </h5>
+                          <p>Check out our <a href="https://cvpr2022.thecvf.com/tutorial-selections"><u>blog post about the tutorial selection process</u></a></p>
+                          <h5 class="title">Area chair for NeurIPS 2022, ICML 2022, ICLR 2022, and CVPR 2022</h5>
+                        </div>
 
                         <div class="tl-item">
                           <h5 class="title">Papers on mobile video networks, adversarial deep learning, and domain adaptation/generalization (2021)</h5>
