--- a/publications.html
+++ b/publications.html
@@ -180,6 +180,39 @@ http://themeforest.net/user/owwwlab/
                       <h5 class="title"></h5>
                   </div>
 
+                  <div class="tl-item active pub-item with-thumb"><span class="item-section">2022</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">When Vision Transformers Outperform ResNets without Pre-training or Strong Data Augmentations</h3>
+                      <div class="description">
+                        <div class="citation"><span>International Conference on Learning Representations <b>(ICLR)</b>, 2022 <b><font color="blue">(Spotlight) </font></b><span class="block-elem">X Chen, C-J Hsieh, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=LtKcMgGOeLt">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2106.01548">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://openreview.net/forum?id=LtKcMgGOeLt">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/google-research/vision_transformer">Model checkpoints</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Surrogate Gap Minimization Improves Sharpness-Aware Training</h3>
+                      <div class="description">
+                        <div class="citation"><span>International Conference on Learning Representations <b>(ICLR)</b>, 2022 <span class="block-elem">J Zhuang, <b>B Gong</b>, L Yuan, Y Cui, H Adam, N Dvornek, S Tatikonda, J Duncan, and T Liu</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=edONMAnhLu-">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2203.08065">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://openreview.net/forum?id=edONMAnhLu-">Openreview</a> ]&nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://sites.google.com/view/gsam-iclr22/home">Code</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;WACV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Federated Multi-Target Domain Adaptation</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Winter Conference on Applications of Computer Vision <b>(WACV)</b>, 2021 <span class="block-elem">C-H Yao, <b>B Gong</b>, Y Cui, H Qi, Y Zhu, and M-H Yang</span></span></div>
+                        <font color="blue">&#10236; [ <a href="papers/federated-da.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2108.07792">ArXiv</a> ]  </font>
+                      </div>
+                    </div>
+                  </div>
+
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2021</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
@@ -230,7 +263,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Adversarially Adaptive Normalization for Single Domain Generalization</h3>
                       <div class="description">
                         <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2021 <span class="block-elem">X Fan, Q Wang, J Ke, F Yang, <b>B Gong</b>, and M Zhou</span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
+                        <font color="blue">&#10236; [ <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Fan_Adversarially_Adaptive_Normalization_for_Single_Domain_Generalization_CVPR_2021_paper.pdf">PDF</a> ]  </font>
                       </div>
                     </div>
                   </div>
@@ -247,12 +280,56 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;NeurIPS</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">VATT: Transformers for Multimodal Self-Supervised Learning from Raw Video, Audio and Text</h3>
+                      <div class="description">
+                        <div class="citation"><span>Advances in Neural Information Processing Systems <b>(NeurIPS)</b>, 2021 <span class="block-elem">H Akbari, L Yuan, R Qian, W-H Chuang, S-F Chang, Y Cui, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=RzYrn625bu8">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2104.11178">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://openreview.net/forum?id=RzYrn625bu8">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/google-research/google-research/tree/master/vatt">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;NeurIPS</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">On Model Calibration for Long-Tailed Object Detection and Instance Segmentation</h3>
+                      <div class="description">
+                        <div class="citation"><span>Advances in Neural Information Processing Systems <b>(NeurIPS)</b>, 2021 <span class="block-elem">T-Y Pan=, C Zhang, Y Li, H Hu, D Xuan, S Changpinyo, <b>B Gong</b>, and W-L Chao</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=t9gKUW9T8fX">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://openreview.net/forum?id=t9gKUW9T8fX">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/tydpan/NorCal">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;WACV</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">Analyzing Deep Neural Network’s Transferability via Fr&eacute;chet Distance</h3>
                       <div class="description">
                         <div class="citation"><span>IEEE Winter Conference on Applications of Computer Vision <b>(WACV)</b>, 2021 <span class="block-elem">Y Ding, L Wang, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/transferability-analysis.pdf">PDF</a> ] 
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;BMVC</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Class-Balanced Distillation for Long-Tailed Visual Recognition</h3>
+                      <div class="description">
+                        <div class="citation"><span>Conference on Empirical Methods in Natural Language Processing <b>(EMNLP)</b>, 2021 <span class="block-elem">A Iscen, A Araujo, <b>B Gong</b>, C Schmid</span></span></div>
+                        <font color="blue">&#10236; [ <a href="papers/crossVQA.pdf">PDF</a> ]  &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/google-research/google-research/tree/master/class_balanced_distillation">Code</a> ]
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;EMNLP</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">CrossVQA: Scalably Generating Benchmarks For Systematically Testing VQA Generalization</h3>
+                      <div class="description">
+                        <div class="citation"><span>Conference on Empirical Methods in Natural Language Processing <b>(EMNLP)</b>, 2021 <span class="block-elem">A Akula, S Changpinyo, <b>B Gong</b>, P Sharma, S-C Zhu, and R Soricut</span></span></div>
+                        <font color="blue">&#10236; [ <a href="papers/crossVQA.pdf">PDF</a> ] 
                       </div>
                     </div>
                   </div>
