--- a/publications.html
+++ b/publications.html
@@ -203,11 +203,22 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Contextualized Spatio-Temporal Contrastive Learning with Self-Supervision</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE/CVF Conference Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2022 <span class="block-elem">L Yuan, R Qian, Y Cui, <b>B Gong</b>, B Gong, F Schroff, M-H Yang, H Adam, and T Liu</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2112.05181.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2112.05181">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/tensorflow/models/tree/master/official/projects/const_cl">Code</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;WACV</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">Federated Multi-Target Domain Adaptation</h3>
                       <div class="description">
-                        <div class="citation"><span>IEEE Winter Conference on Applications of Computer Vision <b>(WACV)</b>, 2021 <span class="block-elem">C-H Yao, <b>B Gong</b>, Y Cui, H Qi, Y Zhu, and M-H Yang</span></span></div>
+                        <div class="citation"><span>IEEE/CVF Winter Conference on Applications of Computer Vision <b>(WACV)</b>, 2022 <span class="block-elem">C-H Yao, <b>B Gong</b>, Y Cui, H Qi, Y Zhu, and M-H Yang</span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/federated-da.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2108.07792">ArXiv</a> ]  </font>
                       </div>
                     </div>
@@ -297,6 +308,50 @@ http://themeforest.net/user/owwwlab/
                       <div class="description">
                         <div class="citation"><span>Advances in Neural Information Processing Systems <b>(NeurIPS)</b>, 2021 <span class="block-elem">T-Y Pan=, C Zhang, Y Li, H Hu, D Xuan, S Changpinyo, <b>B Gong</b>, and W-L Chao</span></span></div>
                         <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=t9gKUW9T8fX">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://openreview.net/forum?id=t9gKUW9T8fX">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/tydpan/NorCal">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICML</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Large-Scale Meta-Learning with Continual Trajectory Shifting</h3>
+                      <div class="description">
+                        <div class="citation"><span>International Conference on Machine Learning <b>(ICML)</b>, 2021 <span class="block-elem">J Shin, HB Lee, <b>B Gong</b>, and SJ Hwang</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2102.07215.pdf">PDF</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">A Lazy Approach to Long-Horizon Gradient-Based Meta-Learning</h3>
+                      <div class="description">
+                        <div class="citation"><span>International Conference on Computer Vision <b>(ICCV)</b>, 2021 <span class="block-elem">M A Jamal*, L Wang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="papers/lazy.pdf">PDF</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">MosaicOS: A Simple and Effective Use of Object-Centric Images for Long-Tailed Object Detection</h3>
+                      <div class="description">
+                        <div class="citation"><span>International Conference on Computer Vision <b>(ICCV)</b>, 2021 <span class="block-elem">C Zhang=, T-Y Pan=, Y Li, H Hu, D Xuan, S Changpinyo, <b>B Gong</b>, and W-L Chao</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2102.08884.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/czhang0528/MosaicOS/">Model checkpoints</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Contrastive Learning for Label Efficient Semantic Segmentation</h3>
+                      <div class="description">
+                        <div class="citation"><span>International Conference on Computer Vision <b>(ICCV)</b>, 2021 <span class="block-elem">X Zhao, R Vemulapalli, PA Mansfield, <b>B Gong</b>, B Green, L Shapira, and Y Wu</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Zhao_Contrastive_Learning_for_Label_Efficient_Semantic_Segmentation_ICCV_2021_paper.pdf">PDF</a> ] </font>
                       </div>
                     </div>
                   </div>
