--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
                           <div class="description"> 
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
+                          <h5 class="title">A short course on Transformer at ICASSP 2022 </h5>
+                          <p><a href="https://transformer-tutorial.github.io/icassp2022/"><u>Check out our course webpage</u></a></p>
                           <h5 class="title">Program co-chair for WACV 2023 </h5>
                           <h5 class="title">Tutorial co-chair for CVPR 2022 </h5>
                           <p>Check out our <a href="https://cvpr2022.thecvf.com/tutorial-selections"><u>blog post about the tutorial selection process</u></a></p>
