--- a/research.html
+++ b/research.html
@@ -128,6 +128,17 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
+                            <h3 class="title"><font color="blue">Data-Efficient Learning of Vision Transformer</font> &#10230; <a href="https://docs.google.com/presentation/d/1I_NzabkxY2V0njGtjUKgbw6f1v1pak_6xQ0On4k-BOw/edit?usp=sharing"> <u>[Slides, 60 mins]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at UIUC, Rutgers, <u><a href="https://l2id.github.io/">IEEE CVPR 2021 Workshop on Learning from Limited or Imperfect Data</a></u>, <u><a href="https://advm-workshop-2021.github.io/">ACM MM 2021 Workshop on Adversarial Learning for Multimedia</a></u>, and <u><a href="https://wsl-workshop.github.io/acml21.html">ACML 2021 Workshop on Weakly Supervised Learning</a></u>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
                             <h3 class="title"><font color="blue">Towards Visual Recognition in the Wild: Long-Tailed Sources and Open Compound Targets</font> &#10230; <a href="https://docs.google.com/presentation/d/1647srRFowWU75oVymBrQqryEo2_52wdKujo53pWImBg/edit?usp=sharing"> <u>[Slides, 30 mins]</u> </a><a href="https://docs.google.com/presentation/d/1R0jY-dYI_5A0eHK291FSEF7oJKIkZelyXmpaGB5GdcY/edit?usp=sharing"> <u>[Slides, 45 mins]</u> </a></h3>
                             <div class="description"> 
                               <p>
