--- a/publications.html
+++ b/publications.html
@@ -105,7 +105,23 @@ http://themeforest.net/user/owwwlab/
                 <div class="row pull-up-210">
                 <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right">
 
-                  <div class="featured-item boxed"><a href="" class="book-el set-bg"><img src="assets/img/long-tail.png" class="set-me">
+                  <div class="featured-item boxed"><a href="https://docs.google.com/presentation/d/1mATalOZ1TwWxG98DXp0CzyuCjgg-F3bf3gy8wzQoLYY/edit?usp=sharing" class="book-el set-bg"><img src="assets/img/vit-sam.png" class="set-me">
+                      <div class="contents">
+                        <div class="item-meta"><span class="date">2022</span></div>
+                        <div class="title-wrapper">
+                          <h2 class="title">Data-efficient Vision Transformer</h2>
+                        </div>
+                      </div></a></div>
+
+                  <div class="featured-item boxed"><a href="https://github.com/google-research/google-research/tree/master/vatt" class="book-el set-bg"><img src="assets/img/vatt.png" class="set-me">
+                      <div class="contents">
+                        <div class="item-meta"><span class="date">2021</span></div>
+                        <div class="title-wrapper">
+                          <h2 class="title">Video-Audio-Text Transformer (VATT)</h2>
+                        </div>
+                      </div></a></div>
+
+                  <div class="featured-item boxed"><a href="https://docs.google.com/presentation/d/1647srRFowWU75oVymBrQqryEo2_52wdKujo53pWImBg/edit?usp=sharing" class="book-el set-bg"><img src="assets/img/long-tail.png" class="set-me">
                       <div class="contents">
                         <div class="item-meta"><span class="date">2020</span></div>
                         <div class="title-wrapper">
@@ -203,6 +219,28 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">LESS: Label-Efficient Semantic Segmentation for LiDAR Point Clouds</h3>
+                      <div class="description">
+                        <div class="citation"><span>European Conference on Computer Vision <b>(ECCV)</b>, 2022 <b><font color="blue">(Oral) </font></b> <span class="block-elem">M Liu, Y Zhou, CR Qin, <b>B Gong</b>, H Su, and D Anguelov</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/2210.08064">ArXiv</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Anti-Neuron Watermarking: Protecting Personal Data Against Unauthorized Neural Networks</h3>
+                      <div class="description">
+                        <div class="citation"><span>European Conference on Computer Vision <b>(ECCV)</b>, 2022 <span class="block-elem">Z Zou, <b>B Gong</b>, and L Wang</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/2109.09023">ArXiv</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">Contextualized Spatio-Temporal Contrastive Learning with Self-Supervision</h3>
@@ -220,6 +258,28 @@ http://themeforest.net/user/owwwlab/
                       <div class="description">
                         <div class="citation"><span>IEEE/CVF Winter Conference on Applications of Computer Vision <b>(WACV)</b>, 2022 <span class="block-elem">C-H Yao, <b>B Gong</b>, Y Cui, H Qi, Y Zhu, and M-H Yang</span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/federated-da.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2108.07792">ArXiv</a> ]  </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;TPAMI</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Open Long-Tailed Recognition In A Dynamic World</h3>
+                      <div class="description">
+                        <div class="citation"><span> IEEE Transactions on Pattern Analysis and Machine Intelligence <b>(TPAMI)</b>, 2022  <span class="block-elem">Z Liu=, Z Miao=, X Zhan, J Wang, <b>B Gong</b>, and S Yu</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/2208.08349">ArXiv</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVIU</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">2.5 D visual relationship detection</h3>
+                      <div class="description">
+                        <div class="citation"><span> Computer Vision and Image Understanding <b>(CVIU)</b>, 2022  <span class="block-elem">YC Su, S Changpinyo, X Chen, S Thoppay, CJ Hsieh, L Shapira, R Soricut, H Adam, M Brown, MH Yang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/2104.12727">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/google-research-datasets/2.5vrd">Data</a> ]</font>
                       </div>
                     </div>
                   </div>
