--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
               </li>
               <li><a href="students.html" title="Students"><span>Students</span></a>
               </li>
-              <!--li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
-              </li-->
-              <li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              <li><a href="teaching.html" title="Teaching"><span>Teaching</span></a>
               </li>
+              <!--li><a href="blog.html" title="Blog"><span>Blog</span></a>
+              </li-->
               <!--li><a href="contact.html" title="Contact"><span>Contact</span></a>
               </li-->
             </ul>
@@ -92,7 +92,7 @@
                     <div class="content-side shadow">
                       <div class="inner-wrapper">
                         <h2 class="title">Boqing Gong</h2>
-                        <h2 class="subtitle">Research Scientist<br>Google<span class="text-uppercase"></span></h2>
+                        <h2 class="subtitle">Assistant Professor<br>Boston University<span class="text-uppercase"></span></h2>
                       </div>
                     </div>
                   </div>
@@ -140,10 +140,10 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a research scientist at Google, Seattle. His research in machine learning and computer vision focuses on efficiency, generalization, and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.<br><br></p>
+                    <p>Boqing Gong is a computer science faculty member at Boston University and a part-time research scientist at Google. His research on machine learning and computer vision focuses on visual recognition, video, and AI models' safety, generalization, and efficiency. Boqing has served as an Associate Editor for IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI) since 2024 and a program co-chair for IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) in 2023.<br><br></p>
 
                     <h3 class="with-sideline">Services</h3>
-                    <p><b>Program co-chair</b> for WACV'23. <b>Tutorial co-chair</b> for CVPR'22, <b>Area chair</b> for CVPR'20, '22, ECCV'20, ICML'19-22, NeurIPS'19-22, ICLR'21-22, ICCV'19-21, AISTATS'19, and WACV'18-20, <b>Senior area chair</b> (meta-reviewer) for AAAI'20-21. <b>NSF Panelist</b>. Reviewer for NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
+                    <p><b>Associate editor</b> for PAMI and TMLR. <b>Program co-chair</b> for WACV'23. <b>Tutorial co-chair</b> for CVPR'22, <b>Senior Area chair or Area Chair</b> for CVPR, ECCV, ICML, NeurIPS, ICLR, ICCV, AISTATS, WACV, and AAAI. <b>NSF Panelist</b>.</p>
                     <p>CVPR'17, '21 Outstanding Reviewer</p>
                     <!--br><br>
                     <p> <font color="black">Curious about <i>sequential determinantal point processes?</i> Come to <u><a href="https://rpand002.github.io/cvpr19_sumt.html"><font color="blue"> our CVPR tutorial</font> </a></u> on June 16, 2019.</font>  </p>
